remove offset from pagination and optimize exception handler