@@ -1,17 +1,16 @@
 package org.example.repository.product;
 
 import lombok.RequiredArgsConstructor;
+import org.example.dto.page.PageResponseDto;
 import org.example.dto.product.ProductDto;
 import org.example.dto.product.ProductRequestDto;
-import org.example.exception.EntityNotFoundException;
-import org.example.exception.InvalidCategoryException;
+import org.example.exception.custom_exception.EntityNotFoundException;
+import org.example.exception.custom_exception.InvalidCategoryException;
 import org.example.mapper.product.ProductMapper;
 import org.example.mapper.product.ProductRowMapper;
 import org.example.model.product.Product;
 import org.springframework.dao.DataIntegrityViolationException;
 import org.springframework.dao.EmptyResultDataAccessException;
-import org.springframework.data.domain.Page;
-import org.springframework.data.domain.PageImpl;
 import org.springframework.data.domain.Pageable;
 import org.springframework.jdbc.core.JdbcTemplate;
 import org.springframework.stereotype.Repository;
@@ -27,23 +26,49 @@ public class ProductRepository {
     private final ProductRowMapper rowMapper;
     private final ProductMapper productMapper;
 
-    public Page<ProductDto> findAll(Pageable pageable) {
-        List<ProductDto> products = jdbcTemplate.query(
-                """
-                    SELECT *
-                    FROM product 
-                    ORDER BY product_name 
-                    LIMIT ?
-                    OFFSET ?
-                    """,
-                rowMapper,
-                        pageable.getPageSize(),
-                        pageable.getOffset()
-                ).stream()
-                .map(productMapper::toDto)
-                .collect(Collectors.toList());
+    public PageResponseDto<ProductDto> findAll(Pageable pageable,
+                                               String lastSeenName,
+                                               int lastSeenId) {
+        List<ProductDto> products;
+        if (lastSeenId == 0 && !lastSeenName.isEmpty()) {
+            products = jdbcTemplate.query(
+                            """
+                                SELECT *
+                                FROM product
+                                ORDER BY product_name, id_product
+                                FETCH FIRST ? ROWS ONLY
+                                """,
+                            rowMapper,
+                            pageable.getPageSize()
+                    ).stream()
+                    .map(productMapper::toDto)
+                    .toList();
+        } else {
+            products = jdbcTemplate.query(
+                            """
+                                 SELECT *
+                                 FROM product
+                                 WHERE (product_name > ?)
+                                    OR (product_name = ? AND id_product = ?)
+                                 ORDER BY product_name, id_product
+                                 FETCH FIRST ? ROWS ONLY
+                                 """,
+                            rowMapper,
+                            lastSeenName,
+                            lastSeenName,
+                            lastSeenId,
+                            pageable.getPageSize()
+                    ).stream()
+                    .map(productMapper::toDto)
+                    .toList();
+        }
         long total = getTotalCount();
-        return new PageImpl<>(products, pageable, total);
+        return PageResponseDto.of(
+                products,
+                pageable.getPageNumber(),
+                pageable.getPageSize(),
+                total
+        );
     }
 
     public Optional<Product> findById(int id) {
@@ -64,63 +89,104 @@ public class ProductRepository {
         }
     }
 
-    public Page<ProductDto> findByName(String name, Pageable pageable) {
-        List<ProductDto> products = jdbcTemplate.query(
+    public PageResponseDto<ProductDto> findByName(String name,
+                                                  Pageable pageable,
+                                                  String lastSeenName,
+                                                  int lastSeenId) {
+        List<ProductDto> products;
+        if (lastSeenId == 0 && !lastSeenName.isEmpty()) {
+            products = jdbcTemplate.query(
                             """
-                            SELECT *
-                            FROM product
-                            WHERE product_name = ?
-                            LIMIT ?
-                            OFFSET ?
-                            """,
+                                SELECT *
+                                FROM product
+                                WHERE product_name = ?
+                                ORDER BY product_name, id_product
+                                FETCH FIRST ? ROWS ONLY
+                                """,
                             rowMapper,
                             name,
-                        pageable.getPageSize(),
-                        pageable.getOffset())
-                .stream()
-                .map(productMapper::toDto)
-                .collect(Collectors.toList());
-        Integer count = jdbcTemplate.queryForObject(
-                """
-                    SELECT COUNT(*)
-                    FROM product
-                    WHERE product_name = ?
-                    """,
-                Integer.class,
-                name
+                            pageable.getPageSize()
+                    ).stream()
+                    .map(productMapper::toDto)
+                    .toList();
+        } else {
+            products = jdbcTemplate.query(
+                            """
+                                 SELECT *
+                                 FROM product
+                                 WHERE product_name = ?
+                                           AND (product_name > ?)
+                                    OR (product_name = ? AND id_product = ?)
+                                 ORDER BY product_name, id_product
+                                 FETCH FIRST ? ROWS ONLY
+                                 """,
+                            rowMapper,
+                            name,
+                            lastSeenName,
+                            lastSeenName,
+                            lastSeenId,
+                            pageable.getPageSize()
+                    ).stream()
+                    .map(productMapper::toDto)
+                    .toList();
+        }
+        long total = getNameCount(name);
+        return PageResponseDto.of(
+                products,
+                pageable.getPageNumber(),
+                pageable.getPageSize(),
+                total
         );
-        long total = count != null ? count : 0;
-        return new PageImpl<>(products, pageable, total);
     }
 
-    public Page<ProductDto> findByCategoryId(int category_number, Pageable pageable) {
-        List<ProductDto> products = jdbcTemplate.query(
-                """
-                     SELECT *
-                     FROM product
-                     WHERE category_number = ?
-                     ORDER BY product_name
-                     LIMIT ?
-                     OFFSET ?
-                     """,
-                rowMapper,
-                category_number,
+    public PageResponseDto<ProductDto> findByCategoryId(int category_number,
+                                                        Pageable pageable,
+                                                        String lastSeenName,
+                                                        int lastSeenId) {
+        List<ProductDto> products;
+        if (lastSeenId == 0 && !lastSeenName.isEmpty()) {
+            products = jdbcTemplate.query(
+                            """
+                                SELECT *
+                                FROM product
+                                WHERE category_number = ?
+                                ORDER BY product_name, id_product
+                                FETCH FIRST ? ROWS ONLY
+                                """,
+                            rowMapper,
+                            category_number,
+                            pageable.getPageSize()
+                    ).stream()
+                    .map(productMapper::toDto)
+                    .toList();
+        } else {
+            products = jdbcTemplate.query(
+                            """
+                                 SELECT *
+                                 FROM product
+                                 WHERE category_number = ?
+                                           AND (product_name > ?)
+                                    OR (product_name = ? AND id_product = ?)
+                                 ORDER BY product_name, id_product
+                                 FETCH FIRST ? ROWS ONLY
+                                 """,
+                            rowMapper,
+                            category_number,
+                            lastSeenName,
+                            lastSeenName,
+                            lastSeenId,
+                            pageable.getPageSize()
+                    ).stream()
+                    .map(productMapper::toDto)
+                    .toList();
+        }
+        long total = getCategoryIdCount(category_number);
+        return PageResponseDto.of(
+                products,
+                pageable.getPageNumber(),
                 pageable.getPageSize(),
-                pageable.getOffset())
-                .stream()
-                .map(productMapper::toDto)
-                .collect(Collectors.toList());
-        Integer count = jdbcTemplate.queryForObject(
-                """
-                    SELECT COUNT(*)
-                    FROM product
-                    WHERE category_number = ?
-                    """,
-                Integer.class,
-                category_number
+                total
         );
-        long total = count != null ? count : 0;
-        return new PageImpl<>(products, pageable, total);
     }
 
     public Product save(Product product) {
@@ -244,6 +310,32 @@ public class ProductRepository {
                 SELECT COUNT(*)
                 FROM product""",
                 Integer.class
+        );
+        return count != null ? count : 0;
+    }
+
+    private long getNameCount(String name) {
+        Integer count = jdbcTemplate.queryForObject(
+                """
+                SELECT COUNT(*)
+                FROM product
+                WHERE product_name = ?
+                """,
+                Integer.class,
+                name
+        );
+        return count != null ? count : 0;
+    }
+
+    private long getCategoryIdCount(int category_number) {
+        Integer count = jdbcTemplate.queryForObject(
+                """
+                SELECT COUNT(*)
+                FROM product
+                WHERE category_number = ?
+                """,
+                Integer.class,
+                category_number
         );
         return count != null ? count : 0;
     }
